changes on makefile

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=9999
-
-DB_HOST=127.0.0.1
-DB_PORT=5458
+DB_HOST=localhost
+DB_PORT=5432
 DB_NAME=fight
 DB_USER=postgres
 DB_PASSWORD=fight
-DB_MAX_CONNECTIONS=90
+DB_MAX_CONNECTIONS=100
+NUM_THREADS=50
