--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   api1: &api # API - Instância 01
-    # image: lucaswilliameufrasio/backend-cockfighting-api
+    # image: lucaswilliameufrasio/rinhadebackend-cpp-drogon
     build: .
     environment:
       - PORT=8080
@@ -44,7 +44,7 @@ services:
 
 
   nginx: # Load Balancer
-    image: nginx:latest
+    image: nginx:alpine
     restart: unless-stopped
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
@@ -59,7 +59,7 @@ services:
           memory: '0.4GB'
 
   database:
-    image: postgres:15
+    image: postgres:alpine
     environment:
       - POSTGRES_PASSWORD=fight
       - POSTGRES_DB=fight
